# pyffp

./: .gitignore  README.md  calc_footprint_FFP_climatology.py  environment.yml  license.txt  pyproject.toml
.github/workflows/: publish_to_pypi.yml
docs/notebooks/: pyffp_demo.ipynb
pyffp/: calc_footprint_FFP.py  calc_footprint_FFP_climatology.py  environment.yml  utils.py
tests/: test_ffp.py  test_ffp_climatology.py
