[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyffp"
version = "0.0.2"
authors = [
  { name="Jemma Stachelek", email="jsta@lanl.gov" },
]
description = "A simple two-dimensional parameterisation for Flux Footprint Prediction (FFP)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jsta/pyffp"
"Bug Tracker" = "https://github.com/jsta/pyffp/issues"
